--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "react-dom": "^16.13.1",
     "react-scripts": "3.4.1",
     "reflect-metadata": "^0.1.13",
-    "typescript": "^3.7.5"
+    "typescript": "^3.7.5",
+    "uuid": "^8.0.0"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -39,5 +40,11 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/graphlib": "^2.1.5",
+    "@types/uuid": "^7.0.3",
+    "@types/uuid-validate": "0.0.1",
+    "uuid-validate": "0.0.3"
   }
 }
