fix sonarcloud issues

--- a/sonarcloud.properties
+++ b/sonarcloud.properties
@@ -2,7 +2,8 @@ sonar.projectKey=recipes
 sonar.projectName=Recipes
 
 # Path to sources
-sonar.sources=src/
+sonar.sources=src/**/
+sonar.tests=src/**/*.test.*
 # sonar.exclusions=src/_generated/
 #sonar.inclusions=
 
