--- a/sonarcloud.properties
+++ b/sonarcloud.properties
@@ -3,7 +3,7 @@ sonar.projectName=Recipes
 
 # Path to sources
 sonar.sources=src/**/
-sonar.tests=src/**/*.test.*
+sonar.tests=src/**/
 # sonar.exclusions=src/_generated/
 #sonar.inclusions=
 
