fix sonarcloud properties

--- a/sonarcloud.properties
+++ b/sonarcloud.properties
@@ -2,8 +2,8 @@ sonar.projectKey=recipes
 sonar.projectName=Recipes
 
 # Path to sources
-sonar.sources=src/**/
-sonar.tests=src/**/
+sonar.sources=src/
+sonar.tests=src/
 # sonar.exclusions=src/_generated/
 #sonar.inclusions=
 
