--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
     "eject": "react-scripts eject",
     "storybook": "start-storybook -p 9009 -s public",
     "build-storybook": "build-storybook -s public",
-    "chromatic": "npx chromatic --project-token=bj77x5x2vkg"
+    "chromatic": "npx chromatic"
   },
   "eslintConfig": {
     "extends": "react-app"
