add chromatic project token to pipeline task

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -12,6 +12,7 @@ variables:
   CI: 'true'
   isMaster: $[eq(variables['Build.SourceBranch'], 'refs/heads/master')]
 
+
 steps:
 - task: NodeTool@0
   inputs:
@@ -50,6 +51,8 @@ steps:
     customCommand: 'run chromatic --exit-zero-on-changes'
   displayName: 'Run UI Regression Tests - Feature Branch'
   condition: and(succeeded(), eq(variables.isMaster, false))
+  env:
+    CHROMATIC_PROJECT_TOKEN: $(CHROMATIC_PROJECT_TOKEN)
 
 - task: Npm@1
   inputs:
