set up simple API

--- a/sonarcloud.properties
+++ b/sonarcloud.properties
@@ -3,7 +3,7 @@ sonar.projectName=Recipes
 
 # Path to sources
 sonar.sources=src/
-# sonar.exclusions=src/_generated/
+sonar.exclusions=src/Api/
 #sonar.inclusions=
 
 # Path to tests
