--- a/package.json
+++ b/package.json
@@ -3,24 +3,24 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@hapi/joi": "^17.1.1",
-    "@material-ui/core": "^4.10.2",
-    "@material-ui/icons": "^4.9.1",
-    "@testing-library/jest-dom": "^4.2.4",
-    "@testing-library/react": "^9.5.0",
-    "@testing-library/user-event": "^7.2.1",
-    "@types/hapi__joi": "^16.0.12",
-    "@types/jest": "^24.9.1",
-    "@types/node": "^12.12.37",
-    "@types/react": "^16.9.34",
-    "@types/react-dom": "^16.9.6",
-    "graphlib": "^2.1.8",
-    "react": "^16.13.1",
-    "react-dom": "^16.13.1",
-    "react-scripts": "3.4.1",
+    "@material-ui/core": "^4.11.2",
+    "@material-ui/icons": "^4.11.2",
+    "@testing-library/jest-dom": "^5.11.6",
+    "@testing-library/react": "^11.2.2",
+    "@testing-library/user-event": "^12.5.0",
+    "@types/jest": "^26.0.16",
+    "@types/node": "^14.14.10",
+    "@types/react": "^17.0.0",
+    "@types/react-dom": "^17.0.0",
+    "@types/react-router-dom": "^5.1.6",
+    "dotenv": "^8.2.0",
+    "react": "^17.0.1",
+    "react-dom": "^17.0.1",
+    "react-router-dom": "^5.2.0",
+    "react-scripts": "^4.0.1",
     "reflect-metadata": "^0.1.13",
-    "typescript": "^3.7.5",
-    "uuid": "^8.0.0",
+    "typescript": "^4.1.2",
+    "uuid": "^8.3.1",
     "validate.js": "^0.13.1"
   },
   "scripts": {
@@ -54,11 +54,10 @@
     "@storybook/addons": "^5.3.19",
     "@storybook/preset-create-react-app": "^3.0.1",
     "@storybook/react": "^5.3.19",
-    "@types/graphlib": "^2.1.5",
-    "@types/uuid": "^7.0.3",
+    "@types/uuid": "^8.3.0",
     "@types/uuid-validate": "0.0.1",
     "chromatic": "^5.0.0",
-    "react-test-renderer": "^16.13.1",
+    "react-test-renderer": "^17.0.1",
     "uuid-validate": "0.0.3"
   }
 }
